--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,8 +1,17 @@
-{% extends "catalogtemplate.html" %} 
-{% block itemcontent %}
-{% if 'username' not in session %}
-{% else %}
-<a href="{{url_for('AddItemHandler')}}">Add Item</a>
-{% endif %}
+{% extends "index.html" %} {% block catalogcontent %}
+<br>
+{% for item in catalog %} 
+<a href="{{url_for('CatalogItemsHander',catagoryname=item.cat_name)}}">{{item.cat_name}}</a>
+{% endfor %} 
 <hr>
+{% block itemcontent %}
 {% endblock %}
+<br>
+    {% if 'username' not in session %}
+    {% else %}
+    <a href="{{url_for('AddItemHandler')}}">Add Item</a>
+    {% endif %}
+<br>
+{% for catitem in catalogitems %}
+<h4>{{catitem.item_name}}<span>({{catitem.catalog.cat_name}})</span></h4>
+{% endfor %}{% endblock %}
