--- a/templates/edititem.html
+++ b/templates/edititem.html
@@ -12,7 +12,7 @@
         <label for="ItemDesc" class="col-md-2 control-label">Description</label>
         <div class="col-md-8">
             <textarea type="text" class="form-control" cols="60" rows="5" id="ItemDesc" placeholder="description" name="ItemDesc" value="{{catitem.description}}">
-            </textarea>
+                    {{catitem.description}}</textarea>
         </div>
     </div>
     <div class="form-group">
