--- a/templates/index.html
+++ b/templates/index.html
@@ -41,17 +41,18 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
+                        <li><a href="{{url_for('CatalogHander')}}">Home</a></li>
                         {% if 'username' not in session %}
-                        <li><button id="signinButton">Login</button></li>
+                        <li><a id="signinButton" href="#">Login</a></li>
                         {% else %}
-                        <li><button id="signOutButton">Logout</button></li>
+                        <li><a id="signOutButton">Logout</a></li>
                         {% endif %}
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
             </div>
             <!-- /.container-fluid -->
-        </nav>
+        </nav>    
 
     </header>
     <section>
@@ -132,6 +133,11 @@
             });
         }
     </script>
+    <script type=text/javascript>
+        $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+    </script>
+    {%block catscriptblock %}
+    {% endblock %}
 </body>
 
 </html>
