--- a/templates/showitem.html
+++ b/templates/showitem.html
@@ -1,5 +1,16 @@
 {% extends "index.html" %} {% block catalogcontent %}
 <p>{{catagoryname}}</p>
 <p>{{itemname}}</p>
+<p>{{itemdesc}}</p>
 <h1>Show Item</h1>
+
+<br>
+{% if 'username' not in session %}
+{% else %}
+<a href="{{url_for('EditItemHandler',itemid=itemid)}}">Edit Item</a>
+<hr>|<hr>
+<a href="{{url_for('DeleteItemHander',itemid=itemid)}}">Delete Item</a>
+{% endif %}
+<br>
+
 {% endblock %}
